More valhalla build adjustments